--- a/SCM-Overhaul/localisation/replace/l_english.yml
+++ b/SCM-Overhaul/localisation/replace/l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+l_english:
  ####################################
  # Misc
  ####################################
@@ -8258,7 +8259,7 @@
  civic_corporate_dominion:0 "Corporate Dominion"
  civic_corporate_dominion_desc:0 "This society is dominated by a megacorporation that has completely supplanted the role of the state."
  civic_agrarian_idyll:0 "Agrarian Idyll"
- civic_agrarian_idyll_desc:0 "A simple and peaceful life can often be the most rewarding. This agrarian society has, to a large extent, managed to avoid large-scale urbanization."
+ civic_agrarian_idyll_desc:0 "A simple and peaceful life can often be the most rewarding. This agrarian society has, to a large extent, managed to avoid large-scale urbanization. \n\n§YGenerator§!, §YMining§! and §YAgriculture Districts§! provide §G1§! more £housing£ §YHousing§!\n§YCity Districts§! provide §R1§! less £housing£ §YHousing§!\n£job_farmer£ §Y$job_farmer_plural$§! also produce §G2§! £amenities£ §YAmenities§!"
  civic_shadow_council:0 "Shadow Council"
  civic_shadow_council_desc:0 "Unbeknownst to its own citizens, this society is actually manipulated from behind the scenes by a secretive shadow council. Appearances must be kept, but the tyranny of the majority should also be guarded against. After all, what if the fools vote for the wrong candidate?"
  civic_mining_guilds:0 "Mining Guilds"
@@ -8435,7 +8436,7 @@
  civic_tooltip_police_state_effects:1 "£job_enforcer  §Y$job_enforcer_plural$§! also produce §Y1§! £unity£ Unity"
  civic_tooltip_technocracy_effects:2 "£building£ §YCapital Buildings§! replace some £job_administrator£ §Y$job_administrator$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!\n§Y$job_researcher_plural$§! also produce §Y0.75§! £unity£ Unity"
  civic_tooltip_merchant_guilds_effects:1 "§YCapital Buildings§! provide £job_merchant£ §Y$job_merchant$§! Jobs\n£job_merchant£ §Y$job_merchant_plural$§! also produce §Y2§! £unity£ Unity"
- civic_tooltip_byzantine_bureaucracy_effects:2 "£job_bureaucrat£ §Y$job_bureaucrat_plural$§! also produce §Y0.75§! £unity£ Unity and §Y1§! £stability£ $PLANET_STABILITY_TITLE$"
+ civic_tooltip_byzantine_bureaucracy_effects:2 "£job_bureaucrat£ §Y$job_bureaucrat_plural$§! also produce §Y1§! £unity£ Unity and §Y1§! £stability£ $PLANET_STABILITY_TITLE$"
  civic_tooltip_machine_maintenance_protocols_effects:0 "£job_maintenance_drone£ §Y$job_maintenance_drone_plural$§! also produce §Y1§! £unity£ Unity"
  civic_tooltip_philosopher_king_effects:0 "Your §YRulers§! and §YGovernors§! are less likely to gain negative traits."
 
