--- a/SCM-Overhaul/localisation/replace/ethic_rebuild_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/ethic_rebuild_l_english.yml
@@ -3638,34 +3638,34 @@ ethic_fanatic_green_desc:1 "§LOur musicians cannot compose a melody so profound
 
 
 COLLECT_ETHIC_ALLOWS_UTOPIA:0 "§ECombination with §HCooperative§! allows §YSocial Equality§! Living Standards§!"
-INDIVID_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §HCompetitive§! allows §YStratified Economy§! Living Standards§!"
+INDIVID_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §HCompetitive§! allows §HStratified Economy§! Living Standards§!"
 
-PROHIBITS_DECENT:0 "§EProhibits §YDecent§! Living Standards§!"
+PROHIBITS_DECENT:0 "§EProhibits §HDecent§! Living Standards§!"
 PROHIBITS_SLAVERY:0 "§EProhibits to use §YEnslavement§! policy to enslave your own species§!"
 
 ALLOWS_ENSLAVEMENT:0 "§EAllows to enslave up to 30% Pops using §YEnslavement§! policy§!"
 ALLOWS_MORE_ENSLAVEMENT:0 "§EAllows to enslave up to 50% Pops using §YEnslavement§! policy§!"
 
-EGALITARIAN_ETHIC_ALLOWS_UTOPIA:0 "§EAllows §YSocial Equality§! Living Standards§!, allows §YUtopian§! Living Standards§!"
-ELITIST_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §Ynon-Democratic§! authority and §Ynon-Pluralism§! ethic allows §YStratified Economy§! Living Standards§!"
+EGALITARIAN_ETHIC_ALLOWS_UTOPIA:0 "§EAllows §HSocial Equality§! Living Standards, allows §HUtopian§! Living Standards§!"
+ELITIST_ETHIC_ALLOWS_STRATIFIED:0 "§ECombination with §Hnon-Democratic§! authority and §Hnon-Pluralism§! ethic allows §HStratified Economy§! Living Standards§!"
 
-PROHIBITS_WELFARE:0 "§EProhibits §YSocial Welfare§! Living Standards§!"
+PROHIBITS_WELFARE:0 "§EProhibits §HSocial Welfare§! Living Standards§!"
 
-ENFORCER_JOBS:0 "§E§HCapital§! buildings provide additional +1 £job_enforcer£ §YEnforcer Job§!§!"
-MORE_ENFORCER_JOBS:0 "§E§HCapital§! buildings provide additional +2 £job_enforcer£ §YEnforcer Jobs§!§!"
+ENFORCER_JOBS:0 "§E§HCapital§! buildings provide additional +1 £job_enforcer£ §HEnforcer Job§!§!"
+MORE_ENFORCER_JOBS:0 "§E§HCapital§! buildings provide additional +2 £job_enforcer£ §HEnforcer Jobs§!§!"
 
-BLOCKERS_BENEFITS:0 "§ENatural planetary §YBlockers§! produce £unity£ §YUnity§! and £amenities£ §YAmenities§!§!"
+BLOCKERS_BENEFITS:0 "§ENatural planetary §HBlockers§! produce £unity£ §HUnity§! and £amenities£ §HAmenities§!§!"
 
 requires_civic_shared_burden:0 "$TRIGGER_FAIL$Required to have a combination of §YFanatic Cooperative§! and §Ynon-Elitism§! ethics."
 
-ALLOWS_STRATIFIED:0 "§ECombination with §Hnon-Cooperative§! ethic allows §YStratified Economy§! Living Standards§!"
+ALLOWS_STRATIFIED:0 "§ECombination with §Hnon-Cooperative§! ethic allows §HStratified Economy§! Living Standards§!"
 
 civic_chosen_people:0 "Chosen People"
 civic_chosen_people_desc:0 "These species fanatically preserve their biological and cultural uniqueness, considering themselves exceptional and chosen by a Higher Power to dominate the galaxy."
 
-LITHOID_EMPIRE:0 "§E§YMiners§! produce additional §Y+2§! £minerals£ §YMinerals§! for §YLithoid§! empires§!"
+LITHOID_EMPIRE:0 "§E§HMiners§! produce additional §H+2§! £minerals£ §HMinerals§! for §HLithoid§! empires§!"
 
-NO_CAMPAIGNS:0 "§ECan't use either §YNutritional Plentitude§! edict or §YEducation§! campaign§!" 
+NO_CAMPAIGNS:0 "§ECan't use either §HNutritional Plentitude§! edict or §HEducation§! campaign§!" 
 
 requires_megacorp_or_merchant:0 "§RRequires you to have §YCompetitive§! ethic.§!"
 
@@ -3689,7 +3689,7 @@ PEACEFUL_ECONOMY_DESC:0 "Setting §YProduction Focus§! policy to §YCivilian§!
 ACADEMIC_PRIVILEGES:0 "Academic Privileges"
 ACADEMIC_PRIVILEGES_DESC:0 "Setting §YAcademic Privileges§! living standards will please the [Root.GetName]."
 
-WASTE_RECYCLING:0 "§E§YWaste Recycling§!: §YArtisans§! and §YMetallurgists§! spend §G-1§! £minerals£ less to produce £consumer_goods£ §YConsumer Goods§! and £alloys£ §YAlloys§!§!"
+WASTE_RECYCLING:0 "§E§HWaste Recycling§!: §HArtisans§! and §HMetallurgists§! spend §G-1§! £minerals£ less to produce £consumer_goods£ §HConsumer Goods§! and £alloys£ §HAlloys§!§!"
 
 TRADE_LEAGUE:0 "Trade League Policy"
 TRADE_LEAGUE_DESC:0 "Setting up §YTrade League§! trade policy will please the [Root.GetName]."
