--- a/SCM-Overhaul/localisation/replace/ethic_rebuild_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/ethic_rebuild_l_english.yml
@@ -3177,7 +3177,7 @@ mod_job_bank_manager_short:0 "\n§G+1§! £mod_bank_manager_add£ per $VALUE$ £
 building_bank_branch:0 "Bank-Corp Branch"
 building_bank_branch_desc:0 "An army of tellers stretching from the bank's headquarters to the most distant of offices stands ready to open accounts and extend loans, always at the most generous of rates (or under the most advantageous conditions)."
 
-civic_tooltip_bank_corp_effects:2 "Can build §YBank Corp Branch Office Buildings§! on branch offices. £building£ §YCapital Buildings§! also add some §Y$job_bank_manager_plural$§ jobs!."
+civic_tooltip_bank_corp_effects:2 "Can build §YBank Corp Branch Office Buildings§! on branch offices. £building£ §YCapital Buildings§! also add some §Y$job_bank_manager_plural$§! jobs."
 civic_bank_corp:0 "Bank Corp"
 civic_bank_corp_desc:0 "This megacorporation has structured itself around the practice of banking, both for its own society and on an intergalactic scale. They handle accounts containing the energy credits and precious assets of a multitude of civilizations. An army of tellers stretching from the bank's headquarters to the most distant of offices stands ready to open accounts and extend loans, always at the most generous of rates (or under the most advantageous conditions). Of course, the executive board does skim just enough of a profit to make their descendants wealthy for generations, but what would one expect? The expert management of money is their business."
 
