--- a/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
@@ -17,7 +17,7 @@
  civic_machine_selfdefense:0 "Solidified Self-Defense A.I."
  civic_machine_selfdefense_desc:0 "This machine understands the art of war, its purpose, and its gains and has determined it to be completely useless and inefficient. Conflict only impedes progress and there is little to no gain by engaging in war when another, far more efficient path exists for all beings. War is the last option for self defense only and should not be used on others, only for self preservation in the highest order."
  civic_machine_overlord:0 "Machine Overlord"
- civic_machine_overlord_desc:0 "As the saying implies: “One cog in the whole machine” this machine expects all things to have better functionality when serving a single unit. Not all living and non-living beings can be expected to fill the duties that are expected of the main unit. Everything, and everyone is delegated to a role that they must fulfil whether they like it or not the main unit always knows what is best for all the subunits below it."
+ civic_machine_overlord_desc:0 "As the saying implies, “One cog in the whole machine”. This machine expects all things to have better functionality when serving a single unit. Not all living and non-living beings can be expected to fill the duties that are expected of the main unit. Everything, and everyone is delegated to a role that they must fulfil whether they like it or not the main unit always knows what is best for all the subunits below it."
  civic_machine_industry:0 "Industrialist Mining A.I."
  civic_machine_industry_desc:0 "From the beginning this machine was designed in its early stages for harvesting resources, gathering materials, and accumulating resources in the most effective ways possible. Sometimes this led to forgoing care about the environment or prioritizing resource extraction over other things. For this machine extracting raw resources and producing a powerful industry based economy is its primary directive."
  civic_machine_beauty:0 "Beautiful Machine Hulls"
@@ -29,7 +29,7 @@
  civic_machine_replication_desc:0 "The Units that constitute the Machine Intelligence were originally designed for rapid proliferation. The Machine Intelligence retains many of these early production pipeline optimizations."
  
  building_aperature_science:0 "Aperature Science Industries"
- building_aperature_science_desc:0 "This Machine Empire is committed towards efficient research and a better life for everyone in the future! Enjoy a facility where Science is the number #1 priority!"
+ building_aperature_science_desc:0 "This Machine Empire is committed towards efficient research and a better life for everyone in the future! Enjoy a facility where Science is the number 1 priority!"
  
  # casus_belli_cb_abduction:0 "Abduction"
  # war_goal_wg_take_pops:0 "Take Pops"
