Fixed "Knowledge Through Trade" not starting with their right policy

--- a/SCM-Overhaul/localisation/replace/wooly_governments_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/wooly_governments_l_english.yml
@@ -4,6 +4,8 @@
  ####################################
  SEPARATOR:0 "---"
 
+###Would be nice if this localization file WORKED
+
 ###Leader titles
 RT_CONDUCTOR:0 "Conductor"
  RT_ESO:0 "Executive Science Officer"
