Fixed typo in the MegaCorp localization file FUCK

--- a/SCM-Overhaul/localisation/replace/wooly_megacorp_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/wooly_megacorp_l_english.yml
@@ -30,7 +30,7 @@ civic_troupe:0 "Influential Troupe"
  civic_inheritance:0 "Expansive Inheriters"
  civic_inheritance_desc:0 "Inheritance is the first word in this MegaCorp's dictionary, and every CEO's son or daughter gains control of all assets upon the CEO's retirement, whatever it be from the company or life itself! The power of a CEO is absolute, and the people will work harder in the CEO's presence! \n\n£job_noble£ §YNoble§! Jobs also produce §H5§! £trade_value£ §HTrade Value§!"
  civic_defense_budget:0 "Defense Budgeting"
- civic_defense_budget_desc:0 "Our top priority is to protect ourselves, and what better way to do that then to invest in defensive facilities? Making use of our state-of-the-art sentries, we'll make sure that our budget is put to good use! \n\n§YGun Batteries§!, §YMissle Batteries§!, and §YHangar Bays§! have 1 less £energy£ §YEnergy§! upkeep and also provide §H2§! £trade_value£ §HTrade Value§!"
+ civic_defense_budget_desc:0 "Our top priority is to protect ourselves, and what better way to do that then to invest in defensive facilities? Making use of our state-of-the-art sentries, we'll make sure that our budget is put to good use! \n\n§YGun Batteries§!, §YMissile Batteries§!, and §YHangar Bays§! have 1 less £energy£ §YEnergy§! upkeep and also provide §H2§! £trade_value£ §HTrade Value§!"
  civic_efficient_stations:0 "Efficient Stations"
  civic_efficient_stations_desc:0 "As the company motto says, "If there's opportunity, it must be developed, and it must be developed NOW!", which is taken to heart. With an emphasis on asset securing, these employees enjoy getting the job done first over everyone else. The early (fluffy) bird gets the worm!"
  civic_insider_trading:0 "Insider Trading"
