--- a/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
@@ -23,7 +23,7 @@
  civic_machine_beauty:0 "Beautiful Machine Hulls"
  civic_machine_beauty_desc:0 "Built for perfection and good looks, these robots are made of the highest quality and are generally more durable. While these robots require more maintenance, the creators certainly felt that the extra cost was worth the effort."
  civic_machine_influencer:0 "Machine-God Influencers"
- civic_machine_influencer_desc:0 "These machines were built to be worshipped and treated like gods! However, their creators passed away due to unknown reasons. The Machine God demands more worshippers, even if they have to use force!"
+ civic_machine_influencer_desc:0 "These machines were built to be worshipped and treated like gods! However, their creators passed away due to unknown reasons. The Machine God demands more worshippers, even if they have to use force! \n\nHas access to the §YConversion§! Casus Belli in their unique §YConversion Wars§! War Philosophy Policy! \n\nHas access to the §YInfluence§! War Goal! This can be used against organic empires to turn them into Vassalized §YMachine Cults!§!
  
  civic_machine_replication:0 "Rapid Replicator"
  civic_machine_replication_desc:0 "The Units that constitute the Machine Intelligence were originally designed for rapid proliferation. The Machine Intelligence retains many of these early production pipeline optimizations."
@@ -36,6 +36,9 @@
  # war_goal_wg_take_pops_desc:0 "War is waged to steal pops (and only pops) from the enemy."
 
 #War Goal localisation text for the Conversion CB used by Machine God Influencers
+ war_goal_wg_influence:0 "Influence"
+ war_goal_wg_influence_desc:1 "War is waged in an attempt to create new worshippers for the Machine God! \n\nIn the event of a Status Quo peace, systems we occupy will be released as a new ideological ally if they include at least one planet."
+
  wg_force_conversion_accept:1 "§Y[From.GetName]§! is forced to adopt the §YSpiritualist§! and the §YIndustrialist§! ethics!"
  wg_force_conversion_accept_2:0 "§Y[From.GetName]§! is forced to adopt the §YMachine Cult§! civic!"
  wg_force_conversion_accept_3:0 "§Y[From.GetRulerTitle] [From.GetRulerName]§! is forced to abdicate"
