--- a/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
@@ -23,7 +23,7 @@
  civic_machine_beauty:0 "Beautiful Machine Hulls"
  civic_machine_beauty_desc:0 "Built for perfection and good looks, these robots are made of the highest quality and are generally more durable. While these robots require more maintenance, the creators certainly felt that the extra cost was worth the effort."
  civic_machine_influencer:0 "Machine-God Influencers"
- civic_machine_influencer_desc:0 "These machines were built to be worshipped and treated like gods! However, their creators passed away due to unknown reasons. The Machine God demands more worshippers, even if they have to use force! \n\nHas access to the §YConversion§! Casus Belli in their unique §YConversion Wars§! War Philosophy Policy! \n\nHas access to the §YInfluence§! War Goal! This can be used against organic empires to turn them into Vassalized §YMachine Cults!§!
+ civic_machine_influencer_desc:0 "These machines were built to be worshipped and treated like gods! However, their creators passed away due to unknown reasons. The Machine God demands more worshippers, even if they have to use force! \n\nHas access to the §YConversion§! Casus Belli in their unique §YConversion Wars§! War Philosophy Policy! \n\nHas access to the §YInfluence§! War Goal! This can be used against organic empires to turn them into Vassalized §YMachine Cults!§!"
  
  civic_machine_replication:0 "Rapid Replicator"
  civic_machine_replication_desc:0 "The Units that constitute the Machine Intelligence were originally designed for rapid proliferation. The Machine Intelligence retains many of these early production pipeline optimizations."
