--- a/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
+++ b/SCM-Overhaul/localisation/replace/wooly_robot_l_english.yml
@@ -43,3 +43,9 @@
  wg_force_conversion_accept_2:0 "§Y[From.GetName]§! is forced to adopt the §YMachine Cult§! civic!"
  wg_force_conversion_accept_3:0 "§Y[From.GetRulerTitle] [From.GetRulerName]§! is forced to abdicate"
  wg_force_conversion_accept_4:0 "§Y[From.GetName]§! is forced to leave their Federation"
+ 
+casus_belli_cb_expel_labs:0 "Cake is a Lie"
+war_goal_wg_expel_labs:0 "Expel Laboratories"
+war_goal_wg_expel_labs_desc:0 "War is waged to close down the laboratories opened up by a machine empire with the §YAperature Science§! civic."
+wg_expel_labs_status_quo_effects:0 "§Y[From.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
+wg_expel_labs_effects:1 "§Y[Root.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
